--- a/.github/workflows/myMLOps_Hello-World.yml
+++ b/.github/workflows/myMLOps_Hello-World.yml
@@ -5,11 +5,11 @@ on:					# It is used to automatically trigger a workflow.
   # Triggers the workflow on push or pull request events but only for the "main" 
   # branch.
   push:				# Runs the workflow when the push event occurs.
-    branches: [ main ]		# workflow will run when someone pushes to main.
+    branches: [ master ]		# workflow will run when someone pushes to main.
   pull_request:			# Runs the workflow when activity on a 
 # pull request in the workflow's 
 # repository occurs.
-    branches: [ main ]		# filter to configure your workflow to only run
+    branches: [ master ]		# filter to configure your workflow to only run
 # on pull requests that target specific branches.
 # A workflow run is made up of one or more jobs that can run sequentially or in 
 # parallel.
